Rename and reorganize Jupyter notebooks
Deleted the introductory notebook '01-jupyter-notebook-101.ipynb'. Renamed 'a.ipynb' to 'A-basic-python-features.ipynb', 'b.ipynb' to 'B-numpy-features.ipynb', 'c.ipynb' to 'C-pandas-features.ipynb', 'exercise-1.ipynb' to '_exercise-1.ipynb', and a non-ASCII file to 'diagram.monojson' for improved clarity and organization.

--- a/A-basic-python-features.ipynb
+++ b/A-basic-python-features.ipynb
@@ -1337,13 +1337,11 @@
    "source": [
     "### 6.1 Basic Function Definition\n",
     "\n",
-    "In Python, you use the `def` keyword to define a function, followed by the function's name and parentheses `()`. The function's \"body\" or block is not enclosed in curly braces `{}`; instead, the line ends with a colon (`:`), and the entire block of code must be **indented**. Just like in C, a function must be defined before your code tries to call it.\n",
+    "In Python, you use the `def` keyword to define a function, followed by the function's name and parentheses `()`. The function's \"body\" or block is not enclosed in curly braces `{}`; instead, the line ends with a colon (`:`), and the entire block of code must be **indented**. \n",
     "\n",
-    "The most striking difference from C/C++ is the lack of type declarations for parameters. Python is dynamically typed, so you do not need to state what type of variable a function expects. You can pass any type of value, and the function will try to run. When you call a function, Python first evaluates all the expressions in the parentheses and then passes the final values.\n",
+    "A function must be defined before your code tries to call it.\n",
     "\n",
-    "This is where **Type Hints** become useful. Type hints are an *optional* way to indicate what type a function *expects* to receive and return. However, these are just \"hints,\" not \"demands.\" Python does not enforce them. If you hint that a function takes an `int` but you pass it a `float`, the code will run perfectly fine as long as the operations inside the function work with a float.\n",
-    "\n",
-    "The time you will get an error is when the *operation* inside the function fails, not the type hint itself. For example, if you hint for an `int` but pass a `string`, the program will crash if you try to use subtraction (`-`) on that string. We generally use type hints when a function is designed for one specific type. If the function is meant to work with multiple types (like `int` and `float`), we usually omit the hint."
+    "In Python, you don't need to state what type of variable a function expects. You can pass any type of value, and the function will try to run. If you want, you can use **Type Hints** to indicate what type a function *expects* to receive and return. However, these are just \"hints\", not \"demands.\" Python does not enforce them. If you hint that a function takes an `int` but you pass it a `float`, the code will run perfectly fine as long as the operations inside the function work with a float."
    ]
   },
   {
@@ -1398,17 +1396,26 @@
     "\n",
     "If you pass a **mutable** object (like a list or dictionary), the function's parameter points to the *exact same object* as the variable outside. If you then call a method on that object (like `lst.append(4)`), you are modifying the original object itself. This change *will* be visible outside the function, even without a `return` statement.\n",
     "\n",
-    "However, be careful! If you use an **assignment statement** (`=`) inside the function, you are not modifying the object. You are simply re-assigning the local variable to point to a new object. This breaks the link to the original, and the original object will not be changed.\n",
+    "Of course, if you use an assignment statement (`=`) inside the function, you are not modifying the object, even when the object is mutable. You are simply re-assigning the local variable to point to a new object. This breaks the link to the original, and the original object will not be changed.\n",
     "\n",
     "In short, there is no real difference in *how* Python passes mutable or immutable types. The difference is that immutable types simply do not have methods that can change them."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f9f64388",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside function: 6\n",
+      "Outside function: 5\n"
+     ]
+    }
+   ],
    "source": [
     "def increment(x):\n",
     "    x += 1\n",
@@ -1421,10 +1428,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6e5bc712",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside function: [1, 2, 3, 4]\n",
+      "Outside function: [1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "def add_item(lst):\n",
     "    lst.append(4)\n",
@@ -1437,10 +1453,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e7ed72bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inside function: [0, 0, 0]\n",
+      "Outside function: [1, 2, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "def reassign_list(lst):\n",
     "    lst = [0, 0, 0]\n",
@@ -1458,11 +1483,11 @@
    "source": [
     "### 6.3 Positional vs. Keyword Arguments\n",
     "\n",
-    "In C/C++, you typically only use **positional arguments**. This means the order of the values you pass when calling a function must match the order of the parameters in the function's definition. Python supports this, but it also adds a more flexible method.\n",
+    "In C, you only use **positional arguments**. This means the order of the values you pass when calling a function must match the order of the parameters in the function's definition. Python supports this, but it also adds a more flexible method.\n",
     "\n",
     "Python also allows for **keyword arguments**. This is where you explicitly use the parameter's name when you call the function. When you use keyword arguments, the order no longer matters, which can make your code much more readable.\n",
     "\n",
-    "You can even mix and match these two styles in a single function call. You can pass the first few arguments by position and the later ones by name. This is often used to pass required arguments first and then set optional ones by name.\n",
+    "You can even mix and match these two styles in a single function call. You can pass the first few arguments by position and the later ones by name.\n",
     "\n",
     "There is one critical rule you must follow: **All positional arguments must come *before* any keyword arguments.** Once you use a keyword argument, you cannot go back to using positional arguments in that call."
    ]
@@ -1474,10 +1499,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_person_info(name, age, char):\n",
+    "def print_person_info(name, age, emoji):\n",
     "    print(\"Hello, my name is\", name)\n",
     "    print(\"I am\", age, \"years old\")\n",
-    "    print(\"My favorite character is:\", char)\n"
+    "    print(\"My favorite Emoji is:\", emoji) \n"
    ]
   },
   {
@@ -1487,7 +1512,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_person_info(\"Niv\", 25, \"!\")"
+    "print_person_info(\"Niv\", 42, \"🙃\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7c7d9c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print_person_info(\"Niv\", emoji=\"🙃\", age=42)"
    ]
   },
   {
@@ -1497,17 +1532,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print_person_info(char=\"!\", name=\"Niv\", age=25)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c5a5da6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print_person_info(\"Niv\", char=\"!\", age=25)"
+    "print_person_info(emoji=\"🙃\", name=\"Niv\", age=42)"
    ]
   },
   {
@@ -1517,7 +1542,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print_person_info(char=\"!\", \"Niv\", age=25) # Error"
+    "# print_person_info(emoji=\"🙃\", \"Niv\", 42) # Error"
    ]
   },
   {
@@ -1529,9 +1554,7 @@
     "\n",
     "Python allows you to provide **default values** for parameters right in the function definition. This makes those arguments *optional* when the function is called. If the caller provides a value for that argument, Python uses it. If they don't, Python uses the default value you provided.\n",
     "\n",
-    "This is a very common feature, but it has one important rule, similar to the one before. Any parameter with a default value must be followed by parameters that *also* have default values. You cannot have a parameter with a default value followed by a \"regular\" parameter that requires a value.\n",
-    "\n",
-    "The logic for this is to prevent confusion. If you had `def example(a, b=10, c):` and called it with `example(1, 2)`, Python wouldn't know what to do. Should `2` be used for `b` (overriding the default) or for `c` (which is required)? To avoid this ambiguity, Python simply forbids this syntax."
+    "There is one important rule, similar to the one before: Any parameter with a default value must be followed by parameters that *also* have default values. You cannot have a parameter with a default value followed by a \"regular\" parameter that requires a value."
    ]
   },
   {
@@ -1541,38 +1564,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def print_person_info(name=\"Unknown\", age=0, char=\"?\"):\n",
+    "def print_person_info(name=\"Unknown\", age=0, emoji=\"👋🏼\"):\n",
     "    print(\"Hello, my name is\", name)\n",
     "    print(\"I am\", age, \"years old\")\n",
-    "    print(\"My favorite character is:\", char)"
+    "    print(\"My favorite character is:\", emoji)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7a845e77",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Niv\n",
+      "I am 25 years old\n",
+      "My favorite character is: 👋🏼\n"
+     ]
+    }
+   ],
    "source": [
     "print_person_info(\"Niv\", 25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a9beaee7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Niv\n",
+      "I am 0 years old\n",
+      "My favorite character is: 👋🏼\n"
+     ]
+    }
+   ],
    "source": [
     "print_person_info(\"Niv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "da139ed0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, my name is Unknown\n",
+      "I am 0 years old\n",
+      "My favorite character is: 👋🏼\n"
+     ]
+    }
+   ],
    "source": [
     "print_person_info()"
    ]
@@ -1584,11 +1637,11 @@
    "source": [
     "### 6.5 Lambda (Anonymous) Functions\n",
     "\n",
-    "A lambda function is a small, anonymous function. It is \"anonymous\" because it doesn't have a name, unlike a function you define with the `def` keyword. Lambdas are written on a single line. They can take any number of arguments, but they can only have **one expression**. The result of this expression is automatically returned.\n",
+    "A lambda function is a small function (written on a single line!) that doesn't have a name. \n",
     "\n",
-    "You asked if this is like `inline` in C++ or `#define` in C. A `lambda` is very different from both, and it's much safer than a C macro. A `#define` macro is simple text substitution, which is why `MY_MACRO(x++)` can cause bugs when `x++` is pasted and evaluated multiple times. A `lambda` is a **real function object**. Its arguments are evaluated *once* before being passed to the expression, which prevents these side-effect bugs.\n",
+    "They can take any number of arguments, but they can only have **one expression**. The result of this expression is automatically returned.\n",
     "\n",
-    "It's also not really like C++'s `inline` keyword, which is just an optimization hint for the compiler. A `lambda` is better thought of as a \"syntactic shortcut.\" It's a convenient way to define a function right at the location where you need it, without needing to go to another part of your code to write a full `def` block. This is most useful when you need to pass a simple, \"throwaway\" function as an argument to another function, such as `map()`, `filter()`, or `sorted()`."
+    "Here some examples for a lambda function and use cases:"
    ]
   },
   {
@@ -1596,10 +1649,27 @@
    "execution_count": null,
    "id": "fa02c87a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "17\n"
+     ]
+    }
+   ],
    "source": [
+    "# You assigned the lambda function to a variable\n",
+    "add = lambda a, b: a + b\n",
     "square = lambda x: x ** 2\n",
-    "add = lambda a, b: a + b\n"
+    "\n",
+    "# So you can use them like regular functions:\n",
+    "print(add(10, 7))\n",
+    "print(square(5)) \n",
+    "\n",
+    "# But, in most cases, lambda functions are used without assigning them to a variable,\n",
+    "# as arguments to higher-order functions like map(), filter(), and sorted()..."
    ]
   },
   {
@@ -1607,20 +1677,38 @@
    "execution_count": null,
    "id": "dfd457eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 4, 9]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Square each number in a set\n",
     "nums = {1, 2, 3}\n",
     "squared_list = list(map(lambda x: x ** 2, nums))\n",
-    "print(squared_list)\n"
+    "print(squared_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "91c1b4a4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Filter positive numbers from a list\n",
     "mixed_nums = [-1, 0, 1, 2]\n",
     "positive_nums = list(filter(lambda x: x > 0, mixed_nums))\n",
     "print(positive_nums)"
@@ -1631,8 +1719,17 @@
    "execution_count": null,
    "id": "48e044a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
+    "# Sort a set of numbers in descending order\n",
     "nums_to_sort = {3, 1, 2}\n",
     "descending_sort = sorted(nums_to_sort, key=lambda x: -x)\n",
     "print(descending_sort)"
@@ -1640,12 +1737,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a638d373",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Beni', 10), ('Avi', 12), ('Gadi', 98)]\n"
+     ]
+    }
+   ],
    "source": [
-    "students = [(\"Bob\", 20), (\"Alice\", 18), (\"Charlie\", 22)]\n",
+    "# Sort a list of tuples by the second element (age)\n",
+    "students = [(\"Avi\", 12), (\"Beni\", 10), (\"Gadi\", 98)]\n",
     "sorted_by_age = sorted(students, key=lambda student: student[1])\n",
     "print(sorted_by_age)"
    ]
