--- a/ex-1/B-numpy-features.ipynb
+++ b/ex-1/B-numpy-features.ipynb
@@ -10,37 +10,64 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5399720",
+   "id": "51a6625c",
    "metadata": {},
    "source": [
-    "This notebook is a hands-on guide to NumPy (Numerical Python) , based on the \"Introduction to Machine Learning and Data Science\" course lecture.\n",
+    "### 1. Using Packages in Python\n",
     "\n",
-    "We will cover:\n",
+    "There are three common ways to import packages in Python, each with its own advantages and disadvantages.\n",
     "\n",
-    "What NumPy is and why we use it.\n",
+    "**A. Importing the Full Package**\n",
     "\n",
-    "Creating arrays.\n",
+    "You can import the entire package using `import numpy`. This makes all of NumPy's functions available, but you must prefix every function with `numpy.` (and a dot).\n",
     "\n",
-    "Array attributes, indexing, and slicing.\n",
+    "This method is very clear because it's obvious where each function is coming from. However, typing `numpy.` every time can be tedious...\n",
     "\n",
-    "Universal Functions (ufuncs).\n",
+    "```python\n",
+    "import numpy\n",
     "\n",
-    "Aggregations and Broadcasting.\n",
+    "arr = numpy.array([1, 2, 3])\n",
+    "arr_sum = numpy.sum(arr)\n",
+    "```\n",
     "\n",
-    "Fancy Indexing.\n",
+    "**B. Importing Specific Functions**\n",
     "\n",
-    "Let's start by importing the standard convention:"
+    "If you only need one or two functions, you can import them directly using the `from ... import ...` syntax. This adds the function names directly to your environment, so you don't need any prefix.\n",
+    "\n",
+    "But this method has a downside. While this is shorter, it can cause \"namespace pollution\". If you import a function named `sum` from NumPy, it will overwrite Python's built-in `sum()` function. This can be confusing...\n",
+    "\n",
+    "```python\n",
+    "from numpy import array, sum\n",
+    "\n",
+    "arr = array([4, 5, 6])\n",
+    "arr_sum = sum(arr)\n",
+    "```\n",
+    "\n",
+    "**C. Importing with an Alias**\n",
+    "\n",
+    "This is the most popular and recommended method for NumPy. We use the `as` keyword to give the package a short \"nickname\" (an alias).\n",
+    "\n",
+    "The standard, community-agreed-upon alias for NumPy is `np`. This gives us the best of both worlds:\n",
+    "\n",
+    "1.  It's short (we type `np.` instead of `numpy.`).\n",
+    "2.  It's clear (we still use a prefix, so `np.sum()` is clearly from NumPy).\n",
+    "\n",
+    "```python\n",
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([10, 20, 30])\n",
+    "arr_sum = np.sum(arr)\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9474b5d2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import sys"
+    "import numpy as np"
    ]
   },
   {
@@ -48,82 +75,96 @@
    "id": "8d71d046",
    "metadata": {},
    "source": [
-    "1. Why NumPy? Python Lists vs. NumPy Arrays\n",
+    "### Why NumPy? Python Lists vs. NumPy Arrays\n",
+    "\n",
     "Python is a dynamically-typed language. This means a single Python list can hold different types of data (e.g., integers, strings, etc.). This flexibility is powerful, but it comes at a cost: each item in the list is a complex C structure that includes its value, its type, and a reference count.\n",
     "\n",
-    "\n",
-    "\n",
-    "NumPy introduces a fixed-type array (it's homogeneous). This \"loses\" flexibility but gains massive efficiency for numerical data, as NumPy can store the data as a continuous block of memory."
+    "NumPy introduces a fixed-type array. This \"loses\" flexibility but gains massive efficiency for numerical data, as NumPy can store the data as a continuous block of memory."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c27c2121",
+   "execution_count": null,
+   "id": "6f8fb401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an array from a list\n",
+    "arr = np.array([1, 4, 2, 5, 3])\n",
+    "print(f\"Array from list: {arr}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f844b230",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# NumPy will \"upcast\" types if necessary\n",
+    "arr = np.array([3.14, 4, 2, 3])\n",
+    "print(f\"Array with upcasting (int -> float): {arr}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38cd668b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Size of a single Python integer (5): 28 bytes\n",
-      "Size of a large Python integer: 36 bytes\n"
-     ]
-    }
-   ],
-   "source": [
-    "# A standard Python integer (e.g., 5) is a full object.\n",
-    "# It takes up much more space than a simple C integer.\n",
-    "n = 5\n",
-    "print(f\"Size of a single Python integer (5): {sys.getsizeof(n)} bytes\")\n",
-    "\n",
-    "# As the integer gets larger, Python dynamically allocates more memory.\n",
-    "n_large = 12345678901234567890\n",
-    "print(f\"Size of a large Python integer: {sys.getsizeof(n_large)} bytes\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "39d340b6",
-   "metadata": {},
-   "source": [
-    "2. Creating NumPy Arrays\n",
-    "You can create arrays in several ways. The most common is from a Python list. You can also use built-in functions to create arrays from scratch."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "bc19a9df",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Array from list: [1 4 2 5 3]\n",
-      "Array with upcasting (int -> float): [3.14 4.   2.   3.  ]\n",
       "Array with specified dtype: [1. 2. 3. 4.]\n"
      ]
     }
    ],
    "source": [
-    "# Create an array from a list\n",
-    "arr1 = np.array([1, 4, 2, 5, 3])\n",
-    "print(f\"Array from list: {arr1}\")\n",
-    "\n",
-    "# Note: NumPy will \"upcast\" types if necessary\n",
-    "arr2 = np.array([3.14, 4, 2, 3])\n",
-    "print(f\"Array with upcasting (int -> float): {arr2}\")\n",
-    "\n",
     "# You can also specify the data type (dtype) explicitly\n",
-    "arr3 = np.array([1, 2, 3, 4], dtype='float32')\n",
-    "print(f\"Array with specified dtype: {arr3}\")"
+    "arr = np.array([1, 2, 3, 4], dtype='float')\n",
+    "print(f\"Array with specified dtype: {arr}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "d46fbc23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an array of zeros\n",
+    "zeros = np.zeros(10, dtype=int)\n",
+    "print(f\"Array of 10 zeros: {zeros}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "222f5e3f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a 3x5 array of ones\n",
+    "ones = np.ones((3, 5), dtype=float)\n",
+    "print(f\"3x5 array of ones:\\n{ones}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "829ca657",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an array of 5 values evenly spaced between 0 and 1\n",
+    "linspace = np.linspace(0, 1, 5)\n",
+    "print(f\"Evenly spaced values: {linspace}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c93b2774",
    "metadata": {},
    "outputs": [
@@ -149,18 +190,6 @@
     }
    ],
    "source": [
-    "# Create an array of zeros\n",
-    "zeros = np.zeros(10, dtype=int)\n",
-    "print(f\"Array of 10 zeros: {zeros}\")\n",
-    "\n",
-    "# Create a 3x5 array of ones\n",
-    "ones = np.ones((3, 5), dtype=float)\n",
-    "print(f\"3x5 array of ones:\\n{ones}\")\n",
-    "\n",
-    "# Create an array of 5 values evenly spaced between 0 and 1\n",
-    "linspace = np.linspace(0, 1, 5)\n",
-    "print(f\"Evenly spaced values: {linspace}\")\n",
-    "\n",
     "# Create a 3x5 array of random integers between 0 and 10\n",
     "random_ints = np.random.randint(0, 10, size=(3, 5))\n",
     "print(f\"3x5 random integer array:\\n{random_ints}\")"
@@ -171,7 +200,8 @@
    "id": "d9c278a8",
    "metadata": {},
    "source": [
-    "3. Array Attributes and Reshaping\n",
+    "### ndim, shape, size, and Reshaping\n",
+    "\n",
     "NumPy arrays have attributes that describe their dimensions and size.\n",
     "\n",
     "ndim: The number of dimensions.\n",
@@ -242,10 +272,12 @@
    "id": "5e5ae13f",
    "metadata": {},
    "source": [
-    "4. Array Indexing and Slicing\n",
+    "### Array Indexing and Slicing\n",
     "Accessing elements is similar to Python lists, but you can use comma-separated indices for multiple dimensions.\n",
     "\n",
-    "CRITICAL NOTE: Unlike Python lists, NumPy array slices are views, not copies. Modifying a slice will modify the original array. This is done for performance."
+    "CRITICAL NOTE: Unlike Python lists, NumPy array slices are views, not copies. Modifying a slice will modify the original array.\n",
+    "\n",
+    "להביא דוגמא מהשיעור"
    ]
   },
   {
@@ -357,13 +389,52 @@
    "id": "be853320",
    "metadata": {},
    "source": [
-    "5. Array Concatenation and Splitting\n",
-    "You can combine arrays using np.concatenate. You can also split them using np.split."
+    "### Array Concatenation\n",
+    "\n",
+    "You can combine arrays using np.concatenate. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "f8d83785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate 1D arrays\n",
+    "x = np.array([1, 2, 3])\n",
+    "y = np.array([3, 2, 1])\n",
+    "z = np.concatenate([x, y])\n",
+    "print(f\"Concatenated 1D: {z}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a379c9f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate 2D arrays (grid)\n",
+    "grid = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(f\"\\nOriginal grid:\\n{grid}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4985a6da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Concatenate along the first axis (rows, axis=0)\n",
+    "grid_ax0 = np.concatenate([grid, grid], axis=0)\n",
+    "print(f\"\\nConcatenated axis=0:\\n{grid_ax0}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7826faf7",
    "metadata": {},
    "outputs": [
@@ -390,23 +461,19 @@
     }
    ],
    "source": [
-    "# Concatenate 1D arrays\n",
-    "x = np.array([1, 2, 3])\n",
-    "y = np.array([3, 2, 1])\n",
-    "z = np.concatenate([x, y])\n",
-    "print(f\"Concatenated 1D: {z}\")\n",
-    "\n",
-    "# Concatenate 2D arrays (grid)\n",
-    "grid = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "print(f\"\\nOriginal grid:\\n{grid}\")\n",
-    "\n",
-    "# Concatenate along the first axis (rows, axis=0)\n",
-    "grid_ax0 = np.concatenate([grid, grid], axis=0)\n",
-    "print(f\"\\nConcatenated axis=0:\\n{grid_ax0}\")\n",
-    "\n",
     "# Concatenate along the second axis (columns, axis=1)\n",
     "grid_ax1 = np.concatenate([grid, grid], axis=1)\n",
     "print(f\"\\nConcatenated axis=1:\\n{grid_ax1}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8c23a8b",
+   "metadata": {},
+   "source": [
+    "### Array Splitting\n",
+    "\n",
+    "You can also split them using np.split."
    ]
   },
   {
@@ -441,7 +508,8 @@
    "id": "e33981b7",
    "metadata": {},
    "source": [
-    "6. Universal Functions (ufuncs)\n",
+    "### Universal Functions (ufuncs)\n",
+    "\n",
     "The key to NumPy's speed is vectorized operations, implemented via \"ufuncs\".\n",
     "\n",
     "Instead of writing a slow Python loop, you can apply operations element-by-element on the entire array at once. This is much faster because the loop happens in C, not Python ."
@@ -449,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7b568fce",
    "metadata": {},
    "outputs": [
@@ -522,7 +590,8 @@
    "id": "9a6e4f4b",
    "metadata": {},
    "source": [
-    "7. Aggregations (Sum, Min, Max, etc.)\n",
+    "### Aggregations (Sum, Min, Max, etc.)\n",
+    "\n",
     "Aggregations are functions that summarize the values in an array. A key concept here is the axis keyword.\n",
     "\n",
     "axis=0: Collapse the columns (e.g., find the min of each column).\n",
@@ -532,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0d5566ec",
    "metadata": {},
    "outputs": [
@@ -553,13 +622,8 @@
     "rand_2d = np.random.random((2, 3)).round(2)\n",
     "print(f\"2x3 random array:\\n{rand_2d}\")\n",
     "\n",
-    "# Aggregate the entire array (no axis)\n",
     "print(f\"Sum of all elements: {np.sum(rand_2d)}\")\n",
-    "\n",
-    "# Aggregate along columns (axis=0)\n",
     "print(f\"Min of each column: {np.min(rand_2d, axis=0)}\")\n",
-    "\n",
-    "# Aggregate along rows (axis=1)\n",
     "print(f\"Max of each row: {np.max(rand_2d, axis=1)}\")"
    ]
   },
@@ -568,13 +632,14 @@
    "id": "a321a5f6",
    "metadata": {},
    "source": [
-    "8. Broadcasting\n",
+    "### Broadcasting\n",
+    "\n",
     "Broadcasting is a set of rules for applying binary ufuncs (like addition) on arrays of different sizes. NumPy \"stretches\" the smaller array to match the larger one, if the dimensions are compatible."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "0c6e7594",
    "metadata": {},
    "outputs": [
@@ -588,7 +653,7 @@
     }
    ],
    "source": [
-    "# Example 1: Array and a scalar\n",
+    "# Array and a scalar\n",
     "a = np.array([0, 1, 2])\n",
     "print(f\"a: {a}\")\n",
     "print(f\"a + 5: {a + 5}\")  # 5 is \"broadcast\" to [5, 5, 5]"
@@ -596,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "8c791b24",
    "metadata": {},
    "outputs": [
@@ -619,7 +684,7 @@
     }
    ],
    "source": [
-    "# Example 2: 2D array and a 1D array\n",
+    "# 2D array and a 1D array\n",
     "ones = np.ones((3, 3))\n",
     "a = np.array([0, 1, 2])\n",
     "print(f\"3x3 ones:\\n{ones}\")\n",
@@ -631,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "5b6ab057",
    "metadata": {},
    "outputs": [
@@ -653,7 +718,7 @@
     }
    ],
    "source": [
-    "# Example 3: Two 1D arrays (one row, one column)\n",
+    "# Two 1D arrays (one row, one column)\n",
     "a = np.arange(3)  # shape (3,) -> treated as 1x3\n",
     "b = np.arange(3).reshape((3, 1))  # shape (3, 1)\n",
     "\n",
@@ -670,9 +735,9 @@
    "id": "36cbb286",
    "metadata": {},
    "source": [
-    "9. Comparison Operators and Fancy Indexing\n",
-    "Comparison operators (like < or >) are also ufuncs. They return a boolean array.\n",
+    "### Comparison Operators and Fancy Indexing\n",
     "\n",
+    "Comparison operators (like < or >) are also ufuncs. They return a boolean array.\n",
     "\n",
     "You can use these boolean arrays to \"mask\" your data and select only the values you care about. This is one form of \"fancy indexing\".\n",
     "\n",
@@ -681,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9f96524f",
    "metadata": {},
    "outputs": [
@@ -702,14 +767,8 @@
     "# Comparison ufunc\n",
     "print(f\"x < 3: {x < 3}\")\n",
     "\n",
-    "# Count how many values are less than 3\n",
-    "# True=1, False=0\n",
     "print(f\"Sum of (x < 3): {np.sum(x < 3)}\")\n",
-    "\n",
-    "# Are any values greater than 8?\n",
     "print(f\"Any > 8? {np.any(x > 8)}\")\n",
-    "\n",
-    "# Are all values less than 8?\n",
     "print(f\"All < 8? {np.all(x < 8)}\")"
    ]
   },
