--- a/ex-1/B-numpy-features.ipynb
+++ b/ex-1/B-numpy-features.ipynb
@@ -19,9 +19,9 @@
     "\n",
     "**A. Importing the Full Package**\n",
     "\n",
-    "You can import the entire package using `import numpy`. This makes all of NumPy's functions available, but you must prefix every function with `numpy.` (and a dot).\n",
+    "You can import the entire package using `import numpy`. This makes all of NumPy's functions available, but you must prefix every function with `numpy.` (with a dot).\n",
     "\n",
-    "This method is very clear because it's obvious where each function is coming from. However, typing `numpy.` every time can be tedious...\n",
+    "This method is very clear because if you work with many packages simultaneously, it’s obvious where each function comes from. However, typing the name of the package every time can be tedious...\n",
     "\n",
     "```python\n",
     "import numpy\n",
@@ -45,12 +45,13 @@
     "\n",
     "**C. Importing with an Alias**\n",
     "\n",
-    "This is the most popular and recommended method for NumPy. We use the `as` keyword to give the package a short \"nickname\" (an alias).\n",
+    "This is the most popular and recommended method for NumPy. We use the `as` keyword to give the package a short \"nickname\" (an alias). The standard, community-agreed-upon alias for NumPy is `np`. \n",
     "\n",
-    "The standard, community-agreed-upon alias for NumPy is `np`. This gives us the best of both worlds:\n",
+    "This gives us the best of both worlds:\n",
     "\n",
-    "1.  It's short (we type `np.` instead of `numpy.`).\n",
-    "2.  It's clear (we still use a prefix, so `np.sum()` is clearly from NumPy).\n",
+    "1. It's short (we type `np.` instead of `numpy.`).\n",
+    "2. It's clear (we still use a prefix, so we know it's from NumPy).\n",
+    "3. It avoids namespace pollution (we don't overwrite built-in functions).\n",
     "\n",
     "```python\n",
     "import numpy as np\n",
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "9474b5d2",
    "metadata": {},
    "outputs": [],
@@ -79,7 +80,57 @@
     "\n",
     "Python is a dynamically-typed language. This means a single Python list can hold different types of data (e.g., integers, strings, etc.). This flexibility is powerful, but it comes at a cost: each item in the list is a complex C structure that includes its value, its type, and a reference count.\n",
     "\n",
-    "NumPy introduces a fixed-type array. This \"loses\" flexibility but gains massive efficiency for numerical data, as NumPy can store the data as a continuous block of memory."
+    "NumPy introduces a fixed-type array. This \"loses\" flexibility but gains **massive efficiency** for numerical data, as NumPy can store the data as a continuous block of memory.\n",
+    "\n",
+    "Here's a quick comparison of performance between Python lists and NumPy arrays for a common operation: squaring each element and summing the results.\n",
+    "\n",
+    "> I use the `%timeit` command available in Jupyter notebooks to measure execution time. pay attention to the time units. Some results in `ms` (milliseconds), `µs` (microseconds), or `ns` (nanoseconds). Remember that a microsecond (`µs`) is 1,000 times faster than a millisecond (`ms`), and a nanosecond (`ns`) is 1,000 times faster than a microsecond (`µs`)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "55067fe7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "187 ns ± 0.539 ns per loop (mean ± std. dev. of 7 runs, 10,000,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "python_list = list(range(10,000))\n",
+    "%timeit sum(x*x for x in python_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "bd845aff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.07 μs ± 3.42 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "numpy_array = np.arange(10,000)\n",
+    "%timeit np.sum(numpy_array * numpy_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00a08557",
+   "metadata": {},
+   "source": [
+    "### הגעתי לכאן!!!"
    ]
   },
   {
@@ -87,11 +138,19 @@
    "execution_count": null,
    "id": "6f8fb401",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array from list: [1 4 2 5 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array from a list\n",
     "arr = np.array([1, 4, 2, 5, 3])\n",
-    "print(f\"Array from list: {arr}\")"
+    "print(\"Array from list:\", arr)"
    ]
   },
   {
@@ -99,11 +158,19 @@
    "execution_count": null,
    "id": "f844b230",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array with upcasting (int -> float): [3.14 4.   2.   3.  ]\n"
+     ]
+    }
+   ],
    "source": [
     "# NumPy will \"upcast\" types if necessary\n",
     "arr = np.array([3.14, 4, 2, 3])\n",
-    "print(f\"Array with upcasting (int -> float): {arr}\")\n"
+    "print(Array with upcasting (int -> float), arr)\n"
    ]
   },
   {
@@ -123,7 +190,7 @@
    "source": [
     "# You can also specify the data type (dtype) explicitly\n",
     "arr = np.array([1, 2, 3, 4], dtype='float')\n",
-    "print(f\"Array with specified dtype: {arr}\")"
+    "print(\"Array with specified dtype:\", arr)"
    ]
   },
   {
@@ -131,11 +198,19 @@
    "execution_count": null,
    "id": "d46fbc23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array of 10 zeros: [0 0 0 0 0 0 0 0 0 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array of zeros\n",
     "zeros = np.zeros(10, dtype=int)\n",
-    "print(f\"Array of 10 zeros: {zeros}\")"
+    "print(\"Array of 10 zeros:\", zeros)"
    ]
   },
   {
@@ -143,11 +218,22 @@
    "execution_count": null,
    "id": "222f5e3f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3x5 array of ones:\n",
+      "[[1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]\n",
+      " [1. 1. 1. 1. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a 3x5 array of ones\n",
     "ones = np.ones((3, 5), dtype=float)\n",
-    "print(f\"3x5 array of ones:\\n{ones}\")"
+    "print(\"3x5 array of ones:\\n\", ones)"
    ]
   },
   {
@@ -155,11 +241,19 @@
    "execution_count": null,
    "id": "829ca657",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Evenly spaced values: [0.   0.25 0.5  0.75 1.  ]\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an array of 5 values evenly spaced between 0 and 1\n",
     "linspace = np.linspace(0, 1, 5)\n",
-    "print(f\"Evenly spaced values: {linspace}\")\n"
+    "print(\"Evenly spaced values:\", linspace)\n"
    ]
   },
   {
@@ -172,27 +266,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Array of 10 zeros: [0 0 0 0 0 0 0 0 0 0]\n",
-      "3x5 array of ones:\n",
-      "[[1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]\n",
-      " [1. 1. 1. 1. 1.]]\n",
-      "Evenly spaced values: [0.   0.25 0.5  0.75 1.  ]\n",
       "3x5 random integer array:\n",
-      "[[1 9 3 6 0]\n",
-      " [5 7 8 5 4]\n",
-      " [6 8 5 6 8]]\n",
-      "3x5 random integer array:\n",
-      "[[1 9 3 6 0]\n",
-      " [5 7 8 5 4]\n",
-      " [6 8 5 6 8]]\n"
+      "[[3 4 4 0 2]\n",
+      " [6 2 6 6 6]\n",
+      " [1 6 7 2 1]]\n"
      ]
     }
    ],
    "source": [
     "# Create a 3x5 array of random integers between 0 and 10\n",
     "random_ints = np.random.randint(0, 10, size=(3, 5))\n",
-    "print(f\"3x5 random integer array:\\n{random_ints}\")"
+    "print(\"3x5 random integer array:\\n\", random_ints)"
    ]
   },
   {
@@ -215,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "id": "436bc6ed",
    "metadata": {},
    "outputs": [
@@ -240,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "id": "16263235",
    "metadata": {},
    "outputs": [
@@ -282,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "4701f613",
    "metadata": {},
    "outputs": [
@@ -318,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "1fd1b0c9",
    "metadata": {},
    "outputs": [
@@ -353,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "5544b8eb",
    "metadata": {},
    "outputs": [
@@ -396,10 +480,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "f8d83785",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenated 1D: [1 2 3 3 2 1]\n"
+     ]
+    }
+   ],
    "source": [
     "# Concatenate 1D arrays\n",
     "x = np.array([1, 2, 3])\n",
@@ -410,10 +502,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "a379c9f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original grid:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Concatenate 2D arrays (grid)\n",
     "grid = np.array([[1, 2, 3], [4, 5, 6]])\n",
@@ -422,10 +525,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "4985a6da",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Concatenated axis=0:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Concatenate along the first axis (rows, axis=0)\n",
     "grid_ax0 = np.concatenate([grid, grid], axis=0)\n",
@@ -434,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7826faf7",
    "metadata": {},
    "outputs": [
@@ -442,17 +558,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Concatenated 1D: [1 2 3 3 2 1]\n",
-      "\n",
-      "Original grid:\n",
-      "[[1 2 3]\n",
-      " [4 5 6]]\n",
-      "\n",
-      "Concatenated axis=0:\n",
-      "[[1 2 3]\n",
-      " [4 5 6]\n",
-      " [1 2 3]\n",
-      " [4 5 6]]\n",
       "\n",
       "Concatenated axis=1:\n",
       "[[1 2 3 1 2 3]\n",
@@ -478,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "1d3fe1f3",
    "metadata": {},
    "outputs": [
@@ -517,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "7b568fce",
    "metadata": {},
    "outputs": [
@@ -548,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "5b1351e5",
    "metadata": {},
    "outputs": [
@@ -601,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "0d5566ec",
    "metadata": {},
    "outputs": [
@@ -610,11 +715,11 @@
      "output_type": "stream",
      "text": [
       "2x3 random array:\n",
-      "[[0.8  0.52 0.27]\n",
-      " [0.63 0.55 0.33]]\n",
-      "Sum of all elements: 3.1000000000000005\n",
-      "Min of each column: [0.63 0.52 0.27]\n",
-      "Max of each row: [0.8  0.63]\n"
+      "[[0.69 0.33 0.99]\n",
+      " [0.86 0.37 0.15]]\n",
+      "Sum of all elements: 3.3899999999999997\n",
+      "Min of each column: [0.69 0.33 0.15]\n",
+      "Max of each row: [0.99 0.86]\n"
      ]
     }
    ],
@@ -639,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "0c6e7594",
    "metadata": {},
    "outputs": [
@@ -661,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "8c791b24",
    "metadata": {},
    "outputs": [
@@ -696,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "5b6ab057",
    "metadata": {},
    "outputs": [
@@ -746,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "9f96524f",
    "metadata": {},
    "outputs": [
@@ -774,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "976d8144",
    "metadata": {},
    "outputs": [
@@ -782,8 +887,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random array: [78 68 36 14 69 59 68 48 89 19]\n",
-      "Values < 50: [36 14 48 19]\n"
+      "Random array: [39 46 93 20 45 18 44 39 79 95]\n",
+      "Values < 50: [39 46 20 45 18 44 39]\n"
      ]
     }
    ],
@@ -798,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "id": "42b399d5",
    "metadata": {},
    "outputs": [
@@ -806,8 +911,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random array: [78 68 36 14 69 59 68 48 89 19]\n",
-      "Elements at [3, 7, 4]: [14 48 69]\n"
+      "Random array: [39 46 93 20 45 18 44 39 79 95]\n",
+      "Elements at [3, 7, 4]: [20 39 45]\n"
      ]
     }
    ],
