Clean up comments and streamline code in ML exercises
Removed placeholder and excessive comments from classification-task2/main.py, making the code more concise and focused. In assignment3-task1.ipynb, updated comments to be shorter and clearer, standardized code style, and improved readability throughout the notebook.

--- a/ex-3/linear-regression-task1/assignment3-task1.ipynb
+++ b/ex-3/linear-regression-task1/assignment3-task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "e1345b1b-071b-4853-b6d0-c732fd2284a8",
    "metadata": {
     "tags": []
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "22f46665-c9f0-40d0-97fb-55c11a0060e2",
    "metadata": {
     "tags": []
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "479584e7-c40f-4b18-8da1-fcdb0cd72f65",
    "metadata": {
     "tags": []
@@ -61,31 +61,29 @@
    "source": [
     "# comments:\n",
     "\n",
-    "# (1) there is a small amount of rows with missing values - they can be dropped\n",
+    "# (1) missing values -> drop them\n",
     "\n",
-    "# (2) you may want to make use of https://pandas.pydata.org/docs/reference/api/pandas.get_dummies.html\n",
-    "# read through the function documentation carefully, and use dtype=float for the \"dtype\" parameter\n",
+    "# (2) use pandas.get_dummies for categorical, with dtype=float\n",
     "\n",
-    "# (3) perform all your computations (solve the task) before the questions part, in a complete, clear and effective manner\n",
+    "# (3) all work before the questions\n",
     "\n",
-    "# (4) in the questions part only print answers based on your solution"
+    "# (4) only print final answer in questions part"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "bb2c04fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load data and drop missing values (first comment 👆🏼)\n",
+    "# load data and drop nulls\n",
     "df = pd.read_csv('insurance_data.csv').dropna()\n",
     "\n",
-    "# Handle categorical variables using get_dummies (second comment 👆🏼)\n",
-    "# drop_first=True is used to avoid dummy variable trap (perfect collinearity)\n",
+    "# get_dummies for categorical vars. drop_first for dummy trap\n",
     "df_processed = pd.get_dummies(df, columns=['gender', 'smoker', 'region'], dtype=float, drop_first=True)\n",
     "\n",
-    "# Define Target and Predictors\n",
+    "# Define y and X\n",
     "y = df_processed['expenses']\n",
     "X_all = df_processed.drop('expenses', axis=1)"
    ]
@@ -108,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "0e334107-1631-4a06-a27f-74cfe0c64bea",
    "metadata": {
     "tags": []
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "5b6941ef",
    "metadata": {},
    "outputs": [
@@ -131,36 +129,28 @@
      "output_type": "stream",
      "text": [
       "Correlation between BMI and Weight: 0.7028\n",
-      "Yes, I removed 'weight' because it has a strong correlation with 'BMI' (approx 0.7) and lacks statistical significance in the full model.\n"
+      "we removed 'weight' because it has a strong correlation with 'BMI' (approx 0.7) and lacks statistical significance in the full model\n"
      ]
     }
    ],
    "source": [
-    "# Step 1: Add a constant term (intercept) to the predictors.\n",
-    "# Statsmodels does not add a constant (beta_0) by default, so we must add it manually.\n",
+    "# add intercept to predictors, it's not by default\n",
     "X1 = sm.add_constant(X_all)\n",
     "\n",
-    "# Step 2: Fit the first OLS (Ordinary Least Squares) model using all available predictors.\n",
+    "# fit first model with all predictors\n",
     "model1 = sm.OLS(y, X1).fit()\n",
     "\n",
-    "# Step 3: Check for multi-collinearity between 'BMI' and 'weight'.\n",
-    "# High correlation suggests that these two variables provide redundant information.\n",
+    "# check correlation for multi-collinearity\n",
     "correlation_bmi_weight = df['BMI'].corr(df['weight'])\n",
     "print(f\"Correlation between BMI and Weight: {correlation_bmi_weight:.4f}\")\n",
     "\n",
-    "# Step 4: Analyze the model summary (optional, but good for decision making).\n",
-    "# In 'model1', 'weight' typically has a high p-value (not significant) due to the presence of BMI.\n",
-    "# Therefore, we decide to remove 'weight' to avoid multi-collinearity.\n",
-    "\n",
-    "# Step 5: Create a new set of predictors (X2) by dropping the 'weight' column.\n",
+    "# weight has high correlation with BMI and high p-value in model1. so we remove it.\n",
     "X2 = X1.drop('weight', axis=1)\n",
     "\n",
-    "# Step 6: Fit the second model (model2) without the 'weight' variable.\n",
-    "# This model is expected to be more stable.\n",
+    "# fit second model, more stable now\n",
     "model2 = sm.OLS(y, X2).fit()\n",
     "\n",
-    "# Print the answer for Question 1\n",
-    "print(\"Yes, I removed 'weight' because it has a strong correlation with 'BMI' (approx 0.7) and lacks statistical significance in the full model.\")"
+    "print(\"we removed 'weight' because it has a strong correlation with 'BMI' (approx 0.7) and lacks statistical significance in the full model\")"
    ]
   },
   {
@@ -173,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "aa4e2e3a-40af-41e6-a93f-c52c08e6d8c8",
    "metadata": {
     "tags": []
@@ -187,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "a01ac61d",
    "metadata": {},
    "outputs": [
@@ -201,14 +191,12 @@
     }
    ],
    "source": [
-    "# Step 1: Extract the coefficient (slope) for the 'age' variable from model2.\n",
-    "# 'params' is a pandas Series containing all the coefficients of the model.\n",
+    "# get 'age' coefficient from model2 params\n",
     "age_coefficient = model2.params['age']\n",
     "\n",
-    "# Step 2: Create a DataFrame to display the answer clearly as requested.\n",
+    "# create a df for the answer\n",
     "q2_answer = pd.DataFrame({'age_marginal_cost': [age_coefficient]})\n",
     "\n",
-    "# Print the answer for Question 2\n",
     "print(q2_answer)"
    ]
   },
@@ -222,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "a2f20dcd-e1d1-4bdb-80ec-95ec821dd540",
    "metadata": {
     "tags": []
@@ -241,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "f8df5c45",
    "metadata": {},
    "outputs": [
@@ -257,19 +245,18 @@
     }
    ],
    "source": [
-    "# The question asks us to consider: age, gender, BMI, weight, children, smoker.\n",
-    "# We interpret the coefficients from model2 (where 'weight' is already removed).\n",
+    "# We use model2 ('weight' is already removed) ..\n",
     "\n",
-    "# Step 1: Identify significant variables.\n",
+    "# Identify significant variables.\n",
     "# We look for variables with a p-value < 0.05.\n",
     "# Based on the summary of model2:\n",
-    "# - 'smoker_yes': Highly significant (p < 0.001)\n",
-    "# - 'BMI': Highly significant (p < 0.001)\n",
-    "# - 'age': Highly significant (p < 0.001)\n",
-    "# - 'children': Typically not significant (p > 0.05) in this dataset.\n",
-    "# - 'gender_male': Typically not significant (p > 0.05).\n",
+    "# 'smoker_yes': Highly significant (p < 0.001)\n",
+    "# 'BMI': Highly significant (p < 0.001)\n",
+    "# 'age': Highly significant (p < 0.001)\n",
+    "# 'children': Typically not significant (p > 0.05) in this dataset.\n",
+    "# 'gender_male': Typically not significant (p > 0.05).\n",
     "\n",
-    "# Step 2: Create the data for the answer manually based on the model's findings.\n",
+    "# Create the data for the answer manually based on the model's findings.\n",
     "# We sort them by the absolute value of their coefficient (Impact).\n",
     "# 1. Smoker: Coefficient is ~23,960 (Huge positive effect)\n",
     "# 2. BMI: Coefficient is ~341 (Positive effect)\n",
@@ -280,7 +267,7 @@
     "    'effect': ['positive', 'positive', 'positive']\n",
     "}\n",
     "\n",
-    "# Step 3: Convert to DataFrame for display.\n",
+    "# Convert to DataFrame for display.\n",
     "q3_answer = pd.DataFrame(q3_data)\n",
     "\n",
     "# Print the answer for Question 3\n",
@@ -297,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "41fd402f-688f-45d3-8193-886ec12b9895",
    "metadata": {},
    "outputs": [],
@@ -311,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "266a05ce",
    "metadata": {},
    "outputs": [
@@ -327,43 +314,27 @@
     }
    ],
    "source": [
-    "# (1) R-squared for the full model (model1) - including all original predictors.\n",
+    "# R-squared for model1 (all predictors)\n",
     "r2_1 = model1.rsquared\n",
     "\n",
-    "# (2) R-squared for the model without multi-collinearity (model2) - 'weight' removed.\n",
+    "# R-squared for model2 (no 'weight')\n",
     "r2_2 = model2.rsquared\n",
     "\n",
-    "# (3) R-squared for a model with ONLY significant predictors.\n",
-    "# We construct X3 by selecting only the columns that were significant in model2.\n",
-    "# These typically are: 'age', 'BMI', 'smoker_yes', and the 'region' dummies (southeast/southwest).\n",
-    "# We must include 'const' as well.\n",
+    "# R-squared for model with significant predictors only\n",
     "significant_vars = ['age', 'BMI', 'smoker_yes', 'region_southeast', 'region_southwest']\n",
     "X3 = X2[['const'] + significant_vars]\n",
-    "\n",
-    "# Fit model3\n",
     "model3 = sm.OLS(y, X3).fit()\n",
     "r2_3 = model3.rsquared\n",
     "\n",
-    "# (4) R-squared for model3 after Feature Scaling.\n",
-    "# We use StandardScaler to scale the predictors (but NOT the constant/intercept).\n",
+    "# R-squared for model3 with scaling. should be the same as (3)\n",
     "scaler = StandardScaler()\n",
-    "\n",
-    "# Drop 'const' before scaling because scaling a constant column (std=0) causes errors.\n",
     "X3_no_const = X3.drop('const', axis=1)\n",
-    "\n",
-    "# Fit the scaler on the data and transform it.\n",
-    "# The result is a numpy array, so we convert it back to a DataFrame with original column names and indices.\n",
     "X4_scaled_values = scaler.fit_transform(X3_no_const)\n",
     "X4_scaled = pd.DataFrame(X4_scaled_values, columns=X3_no_const.columns, index=X3_no_const.index)\n",
-    "\n",
-    "# Add the constant back to the scaled data.\n",
     "X4 = sm.add_constant(X4_scaled)\n",
-    "\n",
-    "# Fit model4\n",
     "model4 = sm.OLS(y, X4).fit()\n",
     "r2_4 = model4.rsquared\n",
     "\n",
-    "# Print the answer for Question 4\n",
     "print(f\"(1) All predictors: {r2_1:.4f}\")\n",
     "print(f\"(2) No Multi-collinearity: {r2_2:.4f}\")\n",
     "print(f\"(3) Significant Only: {r2_3:.4f}\")\n",
@@ -380,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "9e1efc6c-546b-4f9b-8605-15f7a8f58788",
    "metadata": {},
    "outputs": [],
@@ -399,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "70547614-8c77-40c7-9982-1211a2ed0959",
    "metadata": {},
    "outputs": [
@@ -413,32 +384,24 @@
     }
    ],
    "source": [
-    "# We need to predict expenses for:\n",
-    "# Age=66, Gender=female, BMI=35.4, Weight=70.5, Children=1, Smoker=no, Region=southeast.\n",
+    "# Predict for new person with model3 (significant vars only).\n",
     "\n",
-    "# We will use model3 (Significant predictors only) for the prediction.\n",
-    "# The predictors expected by model3 are: ['const', 'age', 'BMI', 'smoker_yes', 'region_southeast', 'region_southwest']\n",
-    "\n",
-    "# Step 1: Create a DataFrame for the single person with the required features.\n",
-    "# Note: 'weight', 'children', and 'gender' are not in model3, so we ignore them.\n",
-    "# 'smoker_yes' is 0 because the person is a non-smoker.\n",
-    "# 'region_southeast' is 1 because the person lives in the southeast.\n",
-    "# 'region_southwest' is 0.\n",
-    "\n",
+    "# Create the data for the person.\n",
+    "# Must match the model columns: const, age, BMI, smoker_yes, regions...\n",
+    "# smoker=no -> smoker_yes=0\n",
+    "# region=southeast -> region_southeast=1, region_southwest=0\n",
     "person_data = pd.DataFrame({\n",
-    "    'const': [1.0],           # Intercept\n",
-    "    'age': [66],              # Age\n",
-    "    'BMI': [35.4],            # BMI\n",
-    "    'smoker_yes': [0],        # 0 = No\n",
-    "    'region_southeast': [1],  # 1 = Yes\n",
-    "    'region_southwest': [0]   # 0 = No\n",
+    "    'const': [1.0],\n",
+    "    'age': [66],\n",
+    "    'BMI': [35.4],\n",
+    "    'smoker_yes': [0],\n",
+    "    'region_southeast': [1],\n",
+    "    'region_southwest': [0]\n",
     "})\n",
     "\n",
-    "# Step 2: Use the predict() method of model3.\n",
-    "# The result is a Series, so we extract the first value using [0].\n",
+    "# predict and get the value\n",
     "predicted_expense = model3.predict(person_data)[0]\n",
     "\n",
-    "# Print the answer for Question 5\n",
     "print(f\"Prediction input details: Age=66, BMI=35.4, Smoker=No, Region=Southeast\")\n",
     "print(f\"Predicted Medical Expense: {predicted_expense:.2f}\")"
    ]
